applications/app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp
  namespace: byor-ns
spec:
  selector:
    matchLabels:
      app: webapp
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: byoritaly/byor-voting-web-app:3.6.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: byor-ns
  name: webapp
  labels:
    app: webapp
    service: webapp
spec:
  selector:
    app: webapp
  ports:
  - name: http
    port: 80
