applications/backend-app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backendapp
  namespace: byor-ns
spec:
  selector:
    matchLabels:
      app: backendapp
  replicas: 1
  template:
    metadata:
      labels:
        app: backendapp
    spec:
      containers:
      - name: backendapp
        image: byoritaly/byor-backend:3.6.2
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: byor-ns
  name: backendapp
  labels:
    app: backendapp
    service: backendapp
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: backendapp
---
