applications/db.yaml
apiVersion: v1
kind: Service
metadata:
 name: mongo
 namespace: byor-ns
 labels:
   name: mongo
spec:
 ports:
 - port: 27017
   targetPort: 27017
 clusterIP: None
 selector:
   name: mongo
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: mongo
  namespace: byor-ns
  name: mongo-db
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: mongo
    spec:
      containers:
      - image: mongo:4.0
        name: mongo
        ports:
        - containerPort: 27017
---
