applications/byor-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: byor-gateway
  namespace: byor-ns
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "byor.martjanplanet.com"
    tls:
      httpsRedirect: true
  - port:
      name: https
      number: 443
      protocol: HTTPS
    hosts:
    - "byor.martjanplanet.com"
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/tls.key
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: byor-vsvc
  namespace: byor-ns
spec:
  hosts:
  - "*"
  gateways:
  - byor-gateway
  http:
  - match:
    - uri:
        prefix: /api/
    rewrite:
        uri: /
    route:
    - destination:
        host: backendapp
        port:
          number: 3000
  - match:
    - uri:
        exact: /login
    - uri:
        prefix: /
    route:
    - destination:
        host: webapp
        port:
          number: 80
